# cnnvideo-timer

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_REVIEW.md  DEPLOY_CHECKLIST.md  DEPLOY_UBUNTU.md  EXAMPLES.md  MIGRATION_GUIDE.md  PLAN.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SECURITY_IMPROVEMENTS.md  install.bat  install.sh  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server.py  setup_ffmpeg.bat  test_api.py
.github/workflows/: ci.yml
config/: config.env.example  sources.json  tiers.json
docs/: README.md  README_CN.md
legacy/: README.md  downloader_checker.py  metadata_manager.py  video_downloader.py
scripts/: deploy.sh  quick_fixes.py
src/: __init__.py  baidu_cloud_uploader.py  config_loader.py
src/api/: __init__.py  dependencies.py  main.py  models.py
src/api/routes/: __init__.py  admin.py  quota.py  sources.py  storage.py  tasks.py
src/core/: __init__.py  config.py  downloader.py  quota.py  sources.py  task_manager.py
src/processors/: __init__.py  ffmpeg.py  learning_modes.py  subtitle.py
src/sources/: __init__.py  base.py  youtube.py
src/storage/: __init__.py  manager.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api_auth.py  test_api_endpoints.py
tests/unit/: __init__.py  test_config.py  test_processors.py  test_task_manager.py
