[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnnvideo-timer"
version = "2.0.0"
description = "A tool for scheduling video downloads from news channels like CNN10"
readme = "docs/README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "CNN Video Timer Team", email = "admin@zhurong.link"}
]
keywords = ["youtube", "video", "downloader", "cnn10", "news", "scheduler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "yt-dlp>=2024.1.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
subtitle = [
    "faster-whisper>=0.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
cnnvideo = "main:main"
cnnvideo-server = "server:main"

[project.urls]
Homepage = "https://github.com/znhskzj/cnnvideo-timer"
Repository = "https://github.com/znhskzj/cnnvideo-timer"
Issues = "https://github.com/znhskzj/cnnvideo-timer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
