[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartnews-learn"
version = "2.0.0"
description = "AI-Powered News Video Platform for Language Learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SmartNews Learn Team", email = "admin@zhurong.link"}
]
keywords = ["video", "learning", "news", "subtitles", "ai", "whisper", "cnn10"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Education",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "yt-dlp>=2024.1.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
subtitle = [
    "faster-whisper>=0.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
smartnews = "server:main"
smartnews-learn = "server:main"

[project.urls]
Homepage = "https://github.com/znhskzj/smartnews-learn"
Documentation = "https://github.com/znhskzj/smartnews-learn#readme"
Repository = "https://github.com/znhskzj/smartnews-learn.git"
Issues = "https://github.com/znhskzj/smartnews-learn/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# =============================================================================
# Black - Code formatter
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | legacy
    | htmlcov
    | \.pytest_cache
    | build
    | dist
)/
'''

# =============================================================================
# Ruff - Fast Python linter
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "legacy",
    "htmlcov",
    ".pytest_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function-call-in-default-argument (FastAPI Depends)
    "B904",   # raise-without-from-inside-except
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py are ok
"tests/*" = ["B011"]      # assert false is ok in tests

[tool.ruff.lint.isort]
known-first-party = ["src"]

# =============================================================================
# MyPy - Static type checker
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "legacy/",
    "venv/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# =============================================================================
# Pytest configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require API server)",
    "slow: Slow tests (video download, processing)",
]

# =============================================================================
# Coverage configuration
# =============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/legacy/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 40
show_missing = true

# =============================================================================
# Bandit - Security linter
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "legacy", "venv", ".venv"]
skips = ["B101"]  # assert_used - we use assert in tests
